fix: add overflowy

--- a/task-manager-front/src/components/tasks.scss
+++ b/task-manager-front/src/components/tasks.scss
@@ -21,7 +21,21 @@
     h3 {
       margin-bottom: 18px;
     }
+
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: linear-gradient(262.71deg, #00d1ff -30.04%, #00ffa3 124.74%);
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+
     .tasks-list {
+      overflow-y: scroll;
       margin-top: 28px;
     }
   }
